--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -23,7 +23,9 @@
             background-image: url(/static/noise\ copy.svg);
             z-index: -1;
         }
-
+        p{
+            font-size:30px;
+        }
         h1 {
             text-align: center;
             color: rgb(0, 0, 0);
