--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -12,6 +12,7 @@
     
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <style>
+        
          body {
             margin: 0;
             padding: 0;
@@ -261,6 +262,6 @@ input {
         {% endif %}
         <a href="{{ url_for('sales', page=page+1, per_page=per_page, start_date=start_date, end_date=end_date, store=store, product=product) }}">Next</a>
     </div>
-
+   </script>
 </body>
 </html>
